--- a/pom.xml
+++ b/pom.xml
@@ -56,10 +56,12 @@
 
 		<!-- https://mvnrepository.com/artifact/org.testng/testng -->
 		<dependency>
-			<groupId>org.testng</groupId>
-			<artifactId>testng</artifactId>
-			<version>6.9.10</version>
+		    <groupId>org.testng</groupId>
+		    <artifactId>testng</artifactId>
+		    <version>7.7.0</version>
+		    <scope>test</scope>
 		</dependency>
+
 
 		<dependency>
 			<groupId>com.aventstack</groupId>
